--- a/test_pb.yml
+++ b/test_pb.yml
@@ -1,7 +1,7 @@
 ---
-- name: Hello World Sample
+- name: Hello Raz
   hosts: all
   tasks:
     - name: Hello Message
       debug:
-        msg: "Hello World!"
+        msg: "Hello Raz!"
